# malaketh-layered

./: Cargo.toml
app/src/: app.rs  main.rs  node.rs  state.rs
cli/src/cmd/: start.rs
contracts/: Staking.sol
engine/src/: engine.rs  lib.rs  staking.rs
signing-secp256k1/: Cargo.toml
signing-secp256k1/src/: lib.rs
types/: Cargo.toml
types/src/: address.rs  signing.rs
