[package]
name = "malachitebft-eth-signing-secp256k1"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
malachitebft-core-types.workspace = true

# secp256k1 cryptography
k256 = { version = "0.13", features = ["ecdsa"] }
signature = { workspace = true }
sha3 = { workspace = true }

# Standard library
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }

[features]
default = []
rand = ["dep:rand"]
serde = ["dep:serde"]